ESLint errors fixed

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -30,6 +30,7 @@
   border: 1px solid $white;
   padding: 8px;
   border-radius: 12px;
+  cursor: pointer;
 }
 .Header__navbar .list__item:hover {
   border: 1px solid $hospital-green;
