--- a/src/styles/ProductItem.module.scss
+++ b/src/styles/ProductItem.module.scss
@@ -19,6 +19,8 @@
 .ProductItem__add-to-cart {
 	margin: 0;
 	cursor: pointer;
+	border: none;
+	background-color: white;
 }
 .ProduProductItem__icon {
 	width: 35px;
