--- a/src/styles/ProductInfo.module.scss
+++ b/src/styles/ProductInfo.module.scss
@@ -5,7 +5,7 @@
 	position: sticky;
 	top: 60px;
 	float: right;
-	
+	z-index: 2;
 }
 .ProductInfo__container {
 	width: 100%;
@@ -18,18 +18,18 @@
 	background-color: white;
 }
 .ProductInfo__image {
-	width: 100%;
-	height: 100%;
+	width: 380px;
+	height: 380px;
 	object-fit: cover;
 	border-bottom-left-radius: 18px;
 	border-bottom-right-radius: 18px;
 }
 .ProductInfo__text {
 	height: 100%;
-	padding: 48px 28px;
+	padding: 48px 28px 10px;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-between;
 	gap: 24px;
 }
 .ProductInfo__price {
@@ -49,6 +49,9 @@
 	align-items: center;
 	justify-content: center;
 	gap: 20px;
+}
+.ProductInfo__description {
+	font-size: $sm;
 }
 
 .ProductInfo__close {
