Making the project a PWA

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -38,6 +38,10 @@
   border: 1px solid $hospital-green;
   color: $hospital-green;
 }
+.menu-icon-container {
+  border: none;
+  background-color: transparent;
+}
 .menu {
   display: none;
 }
